# Solar-Battery-App

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  kilovault.spec  pyproject.toml  requirements.txt  run.py
.claude/: setup.sh
.github/workflows/: build-windows.yml  tests.yml
deploy/: bootstrap.sh  captive_portal.py  config.example.toml  install-pi.sh  kilovault-captive.service  kilovault-kiosk.desktop  kilovault.service  kiosk.sh  setup-hotspot.sh  update.sh
docs/: CABIN.md  HARDWARE.md  OUTDOOR-SOLAR.md  PROTOCOL.md  USAGE.md
firmware/esp32_bridge/: README.md  platformio.ini
firmware/esp32_bridge/src/: main.cpp
kilovault/: __init__.py  alarms.py  cli.py  config.py  diagnostics.py  estimator.py  hardware.py  logging_setup.py  manager.py  protocol.py  qrcode.py  storage.py
kilovault/server/: __init__.py  app.py
kilovault/server/static/: app.js  charts.js  index.html  manifest.webmanifest  style.css
kilovault/transports/: __init__.py  base.py  ble.py  serial_bridge.py  simulator.py
scripts/: build_exe.py
tests/: test_alarms.py  test_config.py  test_diagnostics.py  test_display.py  test_estimator.py  test_hardware.py  test_protocol.py  test_qrcode.py  test_reference_parity.py  test_security.py  test_settings.py  test_storage.py
windows/: Install (run me first).bat  Start KiloVault Monitor.bat
